# ratmen

./: .gitignore  ChangeLog  LICENSE  Makefile  Makefile.in  README  README.md  config.h.in  configure  configure.ac  ratmen.c  vmenu.c
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: changelog  control  copyright  rules
doc/: Makefile.am  Makefile.in  vmenu.1  vmenu.1.md
src/: Makefile.am  Makefile.in  args.c  args.h  config.h.in  config.h.in~  misc.c  misc.h  vmenu.c
tests/: gen_menu.sh
